--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,7 @@
               <div class="card-body">
                 <h4><i class="material-icons">Ubicación</i> Sucursales</h4>
                 <p class="card-text">Visítanos en cualquiera de nuestras más de 150 sucursales a nivel nacional. Horario de atención: Lunes a Viernes de 8:00 am a 4:00 pm.</p>
-                <a href="Sucursales.html" class="btn btn-primary">Encontrar sucursal más cercana</a>
+                <a href="#" class="btn btn-primary">Encontrar sucursal más cercana</a>
               </div>
             </div>
         
