--- a/servicios.html
+++ b/servicios.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="servicios.css">
+    <link rel="stylesheet" href="css/servicios.css">
 </head>
 
 <body>
@@ -24,25 +23,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
               </li>
-              <!-- DROPDOWN DE SERVICIOS -->
               <li class="nav-item">
-                <div class="dropdown">
-                  <button class="nav-item" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Servicios
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#ahorros">Cuenta ahorros</a></li>
-                    <li><a class="dropdown-item" href="#credito">Cuenta de credito</a></li>
-                    <li><a class="dropdown-item" href="#cdt">Cuenta CDT</a></li>
-                  </ul>
-                </div>
+                <a class="nav-link" href="servicios.html">Servicios</a>
               </li>
-              <!-- ************** -->
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contáctanos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sitios_interes.html">Sitios de intrés</a>
               </li>
               <li class="nav-item" id="iniciar_sesion">
                 <a class="nav-link" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Iniciar sesión</a>
@@ -63,7 +48,7 @@
             <div class="modal-body">
             
 
-                <form action="dashboard.html">
+                <form action="dashboard/dashboard.html">
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Dirección de correo</label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -79,7 +64,7 @@
 
         </div>
         </div>
-    </div>
+    </div>
     </div>
 
 
@@ -105,14 +90,14 @@
             *Bajo costo de mantenimiento: Generalmente tiene menos comisiones que una cuenta corriente.</p> <br><br>
         </aside>
         <aside class="img">
-          <img src="closeup-image-man-hand-putting-600nw-2508252931.webp" alt="">
+          <img src="img/closeup-image-man-hand-putting-600nw-2508252931.webp" alt="">
         </aside>
 
       </section>
 
       <section class="cuenta_credito" id="credito">
         <aside class="img">
-          <img src="vector-illustration-list-bills-stored-600nw-2096276047.webp" alt="">
+          <img src="img/vector-illustration-list-bills-stored-600nw-2096276047.webp" alt="">
         </aside>
         <aside class="info">
           <h2>CUENTA CREDITO</h2><br> 
@@ -149,7 +134,7 @@
           </p>
         </aside>
         <aside class="img">
-          <img src="CDT.jpeg" alt="">
+          <img src="img/CDT.jpeg" alt="">
         </aside>
 
       </section>
