--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/contacto.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Banco</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
